# bitwise-calculator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  cmakevars.h.in  main.cpp  myerror.cpp  myerror.h  parser.cpp  parser.h  token.cpp  token.h
